Fixed footer wrap widths

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -205,7 +205,8 @@ footer.bk-footer {
   min-height: 150px;
   color: @color-swatch1;
   .wrapper {
-    width: 60%;
+    width: 90%;
+    max-width: 960px;
     margin: 0 auto;
   }
   h1, h2, h3, h4 {
